Fixed issue with event details not loading if a user is not logged in and fixed some spacing issues with the detail pages. Create page for yugioh bug is fixed where it would not record the selected format

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -150,7 +150,7 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 50%;
+  height: 45%;
   width: 100%;
 }
 
